<resources>
    <string name="app_name">ReliaTest</string>
    <string name="default_toolbar_title">Title</string>
    <string name="dismiss">Dismiss</string>
    <string name="demo1">Demo 1</string>
    <string name="demo2">Demo 2</string>
    <string name="go_to_demo_2">Go to Demo 2</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome %s</string>
    <string name="register">Register</string>
    <string name="search_by_sku">Search By SKU</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="add">Add</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sku">Sku</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="err_email_empty">Please enter your email address</string>
    <string name="err_password_empty">Please enter your password</string>
    <string name="err_email_invalid">Please enter a valid email address</string>
    <string name="err_password_invalid">Password must have at least 6 characters</string>
    <string name="err_fill_all_required_field">Please fill in all the required fields</string>
    <string name="update">Update</string>
    <string name="msg_confirm_delete_product">Are you sure you want to delete this product?</string>

</resources>