<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.example.reliatest.ui.main.UpdateProductFragment" />

        <variable
            name="product"
            type="com.example.reliatest.model.Product" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_xlarge"

            android:paddingEnd="@dimen/space_xlarge">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfSku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sku">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_corner_top"
                    android:enabled="false"
                    android:maxLines="1"
                    android:text="@{product.sku}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@{product.product_name}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@{product.qty.toString()}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/price">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@{product.price.toString()}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/unit">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@{product.unit}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:hint="@string/status">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_corner_bottom"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@{product.status.toString()}" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                style="@style/PrimaryButton"
                android:layout_marginStart="@dimen/space_xlarge"
                android:layout_marginTop="@dimen/space_normal"
                android:layout_marginEnd="@dimen/space_xlarge"
                android:background="@drawable/bg_button_primary"
                android:onClick="@{fragment::onClick}"
                android:text="@string/update" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</layout>