<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.example.reliatest.ui.main.RegisterFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                style="@style/DefaultEditText"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/space_xlarge"
                android:layout_marginEnd="@dimen/space_xlarge"
                android:background="@drawable/bg_corner_top"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                style="@style/DefaultEditText"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/space_xlarge"
                android:layout_marginTop="@dimen/space_small"
                android:layout_marginEnd="@dimen/space_xlarge"
                android:background="@drawable/bg_corner_bottom"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/PrimaryButton"
                android:layout_marginStart="@dimen/space_xlarge"
                android:layout_marginTop="@dimen/space_normal"
                android:layout_marginEnd="@dimen/space_xlarge"
                android:background="@drawable/bg_button_login"
                android:onClick="@{fragment::onClick}"
                android:text="@string/register" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</layout>